--- a/05_sequence/02_range.ipynb
+++ b/05_sequence/02_range.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "range 对象是一个整数等差数列，用内置函数 [range()](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/11_built-in_function/50_range.ipynb) 构造得到，类型是 range："
+    "range 对象是一个整数等差数列，用内置函数 [range()](../11_built-in_function/50_range.ipynb) 构造得到，类型是 range："
    ]
   },
   {
@@ -216,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
