--- a/05_sequence/03_index_slice.ipynb
+++ b/05_sequence/03_index_slice.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "序列类型都可以使用下标进行索引或切片取值，这是序列类型通用操作。可变序列类型比较特殊，例如列表，可以利用索引或切片进行元素增、删、改，详见 [列表的索引和切片](https://xue.cn/hub/reader?bookId=64&path=xue_python_kp/03_list/03_list_indexes_and_slices.ipynb)。\n",
+    "序列类型都可以使用下标进行索引或切片取值，这是序列类型通用操作。可变序列类型比较特殊，例如列表，可以利用索引或切片进行元素增、删、改，详见 [列表的索引和切片](../03_list/03_list_indexes_and_slices.ipynb)。\n",
     "\n",
     "下标从前往后，则以 0 开始，从后往前，则从 -1 开始，双向索引：\n",
     "\n",
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
